# LLM-RevTool

./: .env.example  .gitignore  LICENSE  README.md  final_project_proposal_pwmgpt_v2.md  pyproject.toml  requirements.txt
artifacts/branch_puzzle_2026-03-18T21-32-06+00-00/: AnalysisReport.json  BootstrapEvidence.txt  run_summary.json
artifacts/eval_2026-03-13T21-46-09+00-00/: evaluation_results.csv  evaluation_summary.json
artifacts/eval_2026-03-18T21-31-40+00-00/: evaluation_results.csv  evaluation_summary.json
artifacts/format_string_2026-03-18T21-33-27+00-00/: AnalysisReport.json  BootstrapEvidence.txt  run_summary.json
artifacts/integer_edge_2026-03-18T21-41-35+00-00/: AnalysisReport.json  AutoFacts.txt  BootstrapEvidence.txt  run_summary.json
artifacts/rop_badchars_2026-03-13T21-46-32+00-00/: AnalysisReport.json  AutoFacts.txt  BootstrapEvidence.txt  run_summary.json
artifacts/rop_badchars_2026-03-18T21-32-00+00-00/: AnalysisReport.json  BootstrapEvidence.txt  run_summary.json
artifacts/rop_callme_2026-03-13T21-46-21+00-00/: AnalysisReport.json  AutoFacts.txt  BootstrapEvidence.txt  run_summary.json
challenges/: README.md  build.sh  manifest.json  manifest_rop.json  manifest_rop_all.json  manifest_rop_extra.json
challenges/downloads/: README.md
notes/: recent_results.md
prompts/: generation_prompt.txt
pwngpt_pipeline/: __init__.py  analysis.py  cli.py  config.py  evaluation.py  gemini_client.py  generation.py  helper_insights.py  launcher.py  llm_client.py  local_tools.py  orchestrator.py  prompting.py  schemas.py  utils.py  verification.py
(+238 files in other folders)
